Lessen bottom margin to ensure proper subtext spacing.

--- a/styleguide/source/assets/scss/02-molecules/_download-link.scss
+++ b/styleguide/source/assets/scss/02-molecules/_download-link.scss
@@ -1,7 +1,7 @@
 .ama__download-link {
   display: flex;
   align-items: flex-start;
-  margin-bottom: $gutter/2;
+  margin-bottom: $gutter/4;
 
   & > * {
     display: inline-block;
